# NLU

./: .gitignore  DONTREADME.md  README.md  api.py  boto_connect.py  config.py  main.py  pyproject.toml  stream_gcp.py  utils.py
frontend/: index.html  test.html
random_tests/: complete_log.txt  confidence.txt  entities.txt  trans.txt  transcript.txt
